# gcc-time-trace-plugin

./: .clang-format  CMakeLists.txt  README.md  example.cpp
src/: event.hpp  plugin.cpp  writer.hpp
